[package]
name = "iscp-rs"
version = "0.9.0"
authors = ["aptpod,Inc."]
edition = "2021"
description = "iSCPv2 Client Library"
documentation = "https://docs.rs/iscp-rs"
repository = "https://github.com/aptpod/iscp-rs/"
license = "Apache-2.0"

[lib]
name = "iscp"

[[example]]
name = "upstream"
path = "examples/upstream.rs"

[features]
default = []
gen = []

[build-dependencies]
prost-build = "0.10.4"
glob = "0.3.0"

[dev-dependencies]
env_logger = "0.9"
pretty_assertions = "0.7"
rcgen = "0.8"
criterion = "0.3"
oauth2 = "4.0"
tokio-test = "0.4"

[dependencies]
async-trait = "0.1.50"
thiserror = "1.0"
futures-util = "0.3.14"
tokio = { version = "1.5", features = ["full"] }
tokio-tungstenite = { version= "0.16.1", features = ["rustls-tls-native-roots"] }
url = "2.2"
http = "0.2.4"
prost = "0.10.4"
prost-types = "0.10.1"
tungstenite = { version = "0.16.0", features = ["rustls-tls-native-roots"] }
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.9.2"
log = "0.4.14"
uuid = { version = "1.2", features = ["serde", "v4"] }
mockall = "0.9.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
time = "0.1.44"
crossbeam = "0.8.0"
quinn = "0.8.5"
bincode = "1.3"
rustls = { version = "0.20.7", features = ["dangerous_configuration", "quic"] }
rustls-pemfile = "1.0"
rustls-native-certs = "0.6.2"
webpki = "0.22.0"
bytes = "1.0"

[profile.test]
debug = 1
