[package]
name = "iscp-rs"
version = "0.10.2"
authors = ["aptpod,Inc."]
edition = "2021"
description = "iSCPv2 Client Library"
documentation = "https://docs.rs/iscp-rs"
repository = "https://github.com/aptpod/iscp-rs/"
license = "Apache-2.0"

[lib]
name = "iscp"

[[example]]
name = "upstream"
path = "examples/upstream.rs"

[features]
default = []
gen = []

[build-dependencies]
anyhow = "1"
glob = "0.3.0"
prost-build = "0.10.4"
regex = "1"

[dev-dependencies]
env_logger = "0.9"
pretty_assertions = "0.7"
rcgen = "0.8"
criterion = "0.3"
oauth2 = "4.0"
tokio-test = "0.4"

[dependencies]
async-trait = "0.1.50"
bincode = "1.3"
bytes = { version = "1", features = ["serde"] }
chrono = "0.4.31"
crossbeam = "0.8.0"
futures-util = "0.3.14"
http = "0.2.4"
log = "0.4.14"
mockall = "0.9.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
prost = "0.10.4"
prost-types = "0.10.1"
quinn = "0.10.2"
rustls = { version = "0.21.5", features = ["dangerous_configuration", "quic"] }
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.9.2"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = { version= "0.16.1", features = ["rustls-tls-native-roots"] }
tungstenite = { version = "0.16.0", features = ["rustls-tls-native-roots"] }
url = "2.2"
uuid = { version = "1.2", features = ["serde", "v4"] }
webpki = "0.22.0"

[profile.test]
debug = 1
