[package]
name = "iscp-rs"
version = "1.0.1"
authors = ["aptpod,Inc."]
edition = "2021"
description = "iSCPv2 Client Library"
documentation = "https://docs.rs/iscp-rs"
repository = "https://github.com/aptpod/iscp-rs/"
license = "Apache-2.0"

[lib]
name = "iscp"

[features]
default = []
gen = []
unstable-deflate-window-bits = []
unstable-webtransport = ["dep:wtransport"]

[build-dependencies]
anyhow = "1"
glob = "0.3.0"
prost-build = "0.13.2"
regex = "1"

[dev-dependencies]
env_logger = "0.11.0"

[dependencies]
byteorder = "1.5.0"
bytes = { version = "1.6.0", features = ["serde"] }
crossbeam = "0.8.0"
flate2 = { version = "1.0.30", features = ["zlib-ng"] }
fnv = "1.0.7"
futures = "0.3.30"
log = "0.4.14"
prost = "0.13.2"
prost-types = "0.13.2"
quinn = { version = "0.11.5", default-features = false, features = ["log", "ring", "runtime-tokio", "rustls"] }
rand = "0.8.5"
reqwest = { version = "0.12.3", default-features = false, features = ["rustls-tls-native-roots"] }
reqwest-websocket = "0.4.2"
rustls = { version = "0.23.13", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-native-certs = "0.8.0"
rustls-pemfile = "2.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.13.0"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
url = "2.5"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
webpki = "0.22.0"
wtransport = { version = "0.6.1", features = ["dangerous-configuration"], optional = true }

[profile.test]
debug = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
